--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>locations</title>
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = null;
+  </script>
+
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="init.js"></script>
 </body>
 </html>
+
